# FinLing

./: .gitignore  CONTRIBUTING.md  LEARNING_GUIDE.md  LICENSE  README.md  app.py  pyproject.toml
data/corpora/: README.md
data/corpora/parallel/en_tw/: financial_seed.tsv
data/glossary/: terms_twi.csv
data/knowledge/: financial_concepts.json
finling/: __init__.py  cli.py
finling/api/: routes.py
finling/knowledge/: base.py
finling/languages/: registry.py
finling/pipeline/: core.py
tests/: test_knowledge_base.py  test_languages.py
