[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finling"
version = "0.1.0"
description = "Financial intelligence in African languages — starting with Ghana"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["nlp", "african-languages", "ghana", "financial-literacy", "twi", "ewe", "ga", "dagbani"]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "langdetect>=1.0.9",
    "torch>=2.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
finling = "finling.cli:main"

[tool.setuptools.packages.find]
include = ["finling*"]
exclude = ["tests*", "data*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
